--- a/themes/beardedchildren/coming-soon-style.css
+++ b/themes/beardedchildren/coming-soon-style.css
@@ -182,10 +182,86 @@ a:hover {
     
 }
 
+@media screen and (max-width: 800px) {
+    
+    .kid-bg {
+        height: 427px;
+        width: 745px;
+
+    }
+    .content {
+        font-size: 12px;
+        margin-right: 50px;
+        margin-top: 220px;
+
+    }
+    .growing {
+        padding-bottom: 25px;
+    }
+    .email_input {
+        height: 40px; width: 300px;
+        margin-right: 25px;
+    }
+    .email_go {
+        right: 15px;
+        top: 62px;
+        width: 58px;
+    }
+    .check-container {
+        float: right;
+        margin-right: 0px;
+        margin-top: 35px;
+        padding-top: 0;
+    }
+    
+}
+
+@media screen and (max-width: 500px) {
+    
+     .kid-bg {
+        width: 480px; 
+        margin-top: -30px;
+        margin-left: -25px;
+    }
+    .content {
+        width: 320px;
+        font-size: 8px;
+        margin-top: 135px;
+        margin-right: 0;
+    }
+    .growing {
+        padding-bottom: 7px;
+        margin-right: 60px;
+    }
+    .email_input {
+        height: 30px; width: 190px;
+        margin-right: 60px;
+    }
+    .email_go {
+        right: 45px;
+        top: 34px;
+        width: 40px;
+    }
+    .check-container {
+        float: right;
+        margin-right: 35px;
+        margin-top: 10px;
+        padding-top: 0;
+    }
+    .youtube-img {
+        width: 140px;
+        float: right;
+}
+    
+}
+
 @media screen and (max-width: 400px) {
     
      .kid-bg {
         width: 320px;
+        margin-top: -30px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .content {
         width: 320px;
