--- a/themes/beardedchildren/sass/_layout.scss
+++ b/themes/beardedchildren/sass/_layout.scss
@@ -1,3 +1,27 @@
+
+/* CLEARFIX */
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
+}
+
+/* LAYOUT */
 root { 
     display: block;
 }
