--- a/themes/beardedchildren/sass/_bc-slider.scss
+++ b/themes/beardedchildren/sass/_bc-slider.scss
@@ -1,6 +1,7 @@
 .bc-slider-mask {
 	overflow: hidden;
 	position: relative;
+	z-index: 1;
 }
 
 .bc-slider-mask, .bc-slider-box {
@@ -14,12 +15,35 @@
 }
 
 .bc-slider-sidebar {
-	width: 210px;
+	width: 315px;
 	height: 335px;
-	background: $BCblue;
+	background: rgba( 0, 0, 0, .55 );
 	float: right;
+	color: #FFF;
+	text-align: center;
 }
 
+.bc-slider-sidebar img {
+	margin-top: 25px;
+}
+
+.bc-slider-sidebar p {
+	padding: 0 20px;
+}
+.bc-slider-sidebar > button {
+	background: $BCblue;
+	border: none;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	padding: 12px;
+	cursor: pointer;
+	color: #FFF;
+	font-size: 1.3em;
+	margin-top: 35px;	
+}
+.bc-slider-sidebar > button:hover {
+	background: #229bff;
+}
 .slides-list {
 	list-style: none;
 	margin: 0;
@@ -30,10 +54,14 @@
 	float: left;
 }
 .bc-slider-nav-container {
-  width: 100%; 
-  text-align: center;
-  }
-
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 290px;
+	color: rgba( 255, 255, 255, .5 );
+	z-index: 100;
+	font-size: 1.5em;
+}
 .bc-slider-nav-text {
   width: 40%;
   cursor: pointer;
@@ -41,3 +69,4 @@
   margin-left: 20px; 
   font-size: 1.5em;
   }
+ 
