--- a/themes/beardedchildren/style.css
+++ b/themes/beardedchildren/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: arial;
+}
+
 /* CLEARFIX */
 .clearfix:after {
   content: ".";
@@ -33,11 +37,13 @@ root {
 
 .home-content-slider {
   width: 890px;
+  position: relative;
 }
 
 .bc-slider-mask {
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 .bc-slider-mask, .bc-slider-box {
@@ -51,10 +57,36 @@ root {
 }
 
 .bc-slider-sidebar {
-  width: 210px;
+  width: 315px;
   height: 335px;
-  background: #218ee8;
+  background: rgba(0, 0, 0, 0.55);
   float: right;
+  color: #FFF;
+  text-align: center;
+}
+
+.bc-slider-sidebar img {
+  margin-top: 25px;
+}
+
+.bc-slider-sidebar p {
+  padding: 0 20px;
+}
+
+.bc-slider-sidebar > button {
+  background: #218ee8;
+  border: none;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  padding: 12px;
+  cursor: pointer;
+  color: #FFF;
+  font-size: 1.3em;
+  margin-top: 35px;
+}
+
+.bc-slider-sidebar > button:hover {
+  background: #229bff;
 }
 
 .slides-list {
@@ -71,6 +103,11 @@ root {
 .bc-slider-nav-container {
   width: 100%;
   text-align: center;
+  position: absolute;
+  top: 290px;
+  color: rgba(255, 255, 255, 0.5);
+  z-index: 100;
+  font-size: 1.5em;
 }
 
 .bc-slider-nav-text {
