--- a/themes/beardedchildren/style.css
+++ b/themes/beardedchildren/style.css
@@ -29,6 +29,15 @@ root {
   display: block;
 }
 
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.content-container {
+  width: 890px;
+}
+
 .search-btn {
   position: relative;
   left: -28px;
