--- a/themes/beardedchildren/sass/_layout.scss
+++ b/themes/beardedchildren/sass/_layout.scss
@@ -40,3 +40,15 @@ root {
 	left: -28px;
 	top: 3px;
 }
+.channel-box {
+	width: $fullWidth;
+}
+.channel-logo {
+	float: left;
+}
+.channel-img {
+	float: right;
+	width: 633px;
+	height: 225px;
+	color: #FFF;
+}
