Worked more on BC Video Archive

--- a/themes/beardedchildren/style.css
+++ b/themes/beardedchildren/style.css
@@ -141,3 +141,27 @@ root {
   margin-left: 20px;
   font-size: 1.5em;
 }
+
+.channel-container {
+  float: left;
+}
+
+.channel-box {
+  width: 1032px;
+  background: blue;
+}
+
+.channel-logo {
+  width: 385px;
+  height: 225px;
+  background: gray;
+}
+
+.channel-img {
+  width: 633px;
+  height: 225px;
+}
+
+.videos-box {
+  width: 1032px;
+}
