Update to Types plugin / Worked on displaying posts on page.php / fixed setting->reading to reflect "Home" as the static home page

--- a/plugins/types/embedded/resources/css/basic.css
+++ b/plugins/types/embedded/resources/css/basic.css
@@ -417,3 +417,7 @@ input.wpcf-form-error {
     font-size: 0.9em;
     font-style: italic;
 }
+.types-ajax #screen-meta-links,
+.types-ajax #screen-meta {
+    display: none;
+}
