--- a/themes/beardedchildren/sass/style.scss
+++ b/themes/beardedchildren/sass/style.scss
@@ -4,4 +4,5 @@
 @import "layout";
 @import "front-page";
 @import "bc-slider";
-@import "video-archive"
+@import "video-archive";
+@import "whats_new";
