--- a/themes/beardedchildren/sass/style.scss
+++ b/themes/beardedchildren/sass/style.scss
@@ -2,7 +2,9 @@
 @import "global";
 @import "variables";
 @import "layout";
+@import "header";
 @import "front-page";
 @import "bc-slider";
 @import "video-archive";
-@import "whats_new";
+@import "tabs";
+@import "footer";
