--- a/themes/beardedchildren/style.css
+++ b/themes/beardedchildren/style.css
@@ -37,7 +37,6 @@ root {
 .content-container {
   width: 890px;
   margin: 0 auto;
-  position: relative;
 }
 
 .search-btn {
@@ -241,6 +240,14 @@ root {
   text-indent: -9999px;
 }
 
+.inactive-home-tab {
+  background: #FFF;
+}
+
+.inactive-home-tab:hover {
+  background: #8cc1e5;
+}
+
 .active-home-tab {
   background: #218ee8;
 }
@@ -249,7 +256,6 @@ root {
   width: 65px;
   height: 60px;
   margin: 0 auto;
-  background-positon: center;
 }
 
 .home-blog-tab {
@@ -267,6 +273,14 @@ root {
 
 .home-writing-tab {
   background: url("images/icons/writing_icon.png") no-repeat;
+}
+
+#my-tooltip {
+  position: absolute;
+  background: red;
+  width: 150px;
+  height: 135px;
+  z-index: 9999;
 }
 
 .main-footer {
