--- a/themes/beardedchildren/sass/_global.scss
+++ b/themes/beardedchildren/sass/_global.scss
@@ -1,3 +1,16 @@
 body {
-	font-family: arial;
+	font-family: arial, sans serif;
+	font-size: 16px;
+	line-height: 18px;
+}
+
+a {
+	color: #FF9C14;
+	font-family: arial, sans serif;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #ffbe65;
 }
