--- a/themes/beardedchildren/sass/_tabs.scss
+++ b/themes/beardedchildren/sass/_tabs.scss
@@ -16,7 +16,6 @@
 	float: left;
 	width: 25%; height: 60px;
 	text-indent: -9999px;
-	//position: relative;
 }
 
 .inactive-home-tab {
@@ -24,7 +23,7 @@
 }
 
 .inactive-home-tab:hover {
-	background: #8cc1e5;
+	background: $lightBCblue;
 }
 
 .active-home-tab {
@@ -59,7 +58,28 @@
 
 #my-tooltip {
 	position: absolute;
-	background: red;
-	width: 150px; height: 135px;
+	//background: $BCblue;
+	color: #DDD;
+	font-size: 1.5em;
 	z-index:9999;
+	// padding: 5px;
+	// -webkit-box-shadow:  1px 1px 2px 2px #3f3f3f ;    
+ //    box-shadow:  1px 1px 2px 2px #3f3f3f;
+ //    -webkit-border-radius: 8px;
+ //    border-radius: 8px;
+ text-shadow: 2px 2px 2px #3f3f3f;
+        filter: dropshadow(color=#3f3f3f, offx=2, offy=2);
+
+
+}
+
+.tabs-single-container {
+	width: $contWidth * 0.65;
+	float: left;
+}
+
+.tabs {
+	width: 100%;
+	float: left;
+	margin-right: -$contWidth * 0.3;
 }
