--- a/themes/beardedchildren/style.css
+++ b/themes/beardedchildren/style.css
@@ -56,6 +56,23 @@ root {
   float: right;
 }
 
+.wp-post-image {
+  width: 100%;
+  height: 100%;
+}
+
+.page-content, .whats-new-container, .post-31 {
+  width: 578.5px;
+  float: left;
+  display: block;
+}
+
+.single-container, .page-single-container {
+  width: 578.5px;
+  float: left;
+  margin-right: -30%;
+}
+
 .adbox {
   position: fixed;
   width: 150px;
@@ -322,12 +339,6 @@ root {
   width: 100%;
   float: left;
   margin-right: -267px;
-}
-
-.single-container {
-  width: 578.5px;
-  float: left;
-  margin-right: -30%;
 }
 
 .main-footer {
