Added "More" button on Home page

--- a/themes/beardedchildren/sass/_layout.scss
+++ b/themes/beardedchildren/sass/_layout.scss
@@ -55,3 +55,14 @@ root {
 	float: left;
 	margin-right: -30%;
 }
+
+.more-box {
+	font-size: 1.25em;
+	color: $BCblue;
+	float: right;
+}
+
+.more-box img {
+	margin: 10px 0 0 10px;
+	float: left;
+}
