--- a/themes/beardedchildren/style.css
+++ b/themes/beardedchildren/style.css
@@ -73,6 +73,17 @@ root {
   margin-right: -30%;
 }
 
+.more-box {
+  font-size: 1.25em;
+  color: #218ee8;
+  float: right;
+}
+
+.more-box img {
+  margin: 10px 0 0 10px;
+  float: left;
+}
+
 .adbox {
   position: fixed;
   width: 150px;
