Fixed layout for "More" buttons and worked with site theme colors / Added featured images for videos
Also fixed "Videos" page to demonstrate meta key and value in args to
show only channel types

--- a/themes/beardedchildren/sass/_global.scss
+++ b/themes/beardedchildren/sass/_global.scss
@@ -5,12 +5,12 @@ body {
 }
 
 a {
-	color: #FF9C14;
+	color: $linkBlue;
 	font-family: arial, sans serif;
 	font-weight: bold;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #ffbe65;
+	color: $hoverLinkBlue;
 }
