--- a/themes/beardedchildren/sass/_variables.scss
+++ b/themes/beardedchildren/sass/_variables.scss
@@ -1,4 +1,11 @@
+// Colors
 $BCblue: #218ee8;
 $lightBCblue: #8cc1e5;
+$BCorange: #FF9C14;
+$lightBCorange: #ffbe65;
+$linkBlue: #57ACF3;
+$hoverLinkBlue: #81BFF3;
+
+// Layout
 $fullWidth: 1024px;
 $contWidth: 890px;
