--- a/themes/beardedchildren/sass/_layout.scss
+++ b/themes/beardedchildren/sass/_layout.scss
@@ -56,6 +56,19 @@ root {
 	margin-right: -30%;
 }
 
+.header-description {
+	color: $BCorange;
+	font-weight: bold;
+	margin: 0;
+	padding-left: 10px;
+}
+
+.more-container {
+	overflow: hidden;
+	width: 100%;
+	height: 40px;
+}
+
 .more-box-bottom, .more-box-top {
 	font-size: 1.25em;
 	float: right;
@@ -64,7 +77,8 @@ root {
 }
 
 .more-box-top {
-	margin-top: -23px;
+	color: #FFF;
+	margin-top: -64px;
 	-webkit-border-radius: 0 0 5px 5px;
     border-radius: 0 0 5px 5px;
 }
@@ -79,10 +93,8 @@ root {
 	background: $lightBCorange;
 }
 
-.more-box-top a, .more-box-bottom a {
-
+.more-box-bottom a {
 	color: #FFF;
-
 }
 
 .date-and-author-box {
@@ -90,7 +102,6 @@ root {
 	font-size: .8em;
 	width: 100%;
 	margin-top: -15px;
-	padding-bottom: 35px;
 }
 
 .date-and-author-box a {
