--- a/themes/beardedchildren/sass/_layout.scss
+++ b/themes/beardedchildren/sass/_layout.scss
@@ -102,6 +102,7 @@ root {
 	font-size: .8em;
 	width: 100%;
 	margin-top: -15px;
+	margin-bottom: 30px;
 }
 
 .date-and-author-box a {
@@ -121,4 +122,22 @@ root {
 
 .head-date {
 	color: #515151;
+}
+
+// POST SOCIAL ICONS
+
+.post-social-box-list {
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
+.post-social-box-list li {
+	float: left;
+}
+
+.post-social {
+	width: 24px; height: 24px;
+	background: green;
+	background-position: 0 -34px;
 }
